--- a/css/style_edx_2019.css
+++ b/css/style_edx_2019.css
@@ -3,7 +3,7 @@
 
 */
 
-/* http://meyerweb.com/eric/tools/css/reset/
+/* https://meyerweb.com/eric/tools/css/reset/
 v2.0 | 20110126
 License: none (public domain)
 */
@@ -2743,7 +2743,7 @@ h2{
 	height:auto;
 }
 img.grayscale {
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+ */
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'https://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+ */
 	filter: gray; /* IE6-9 */
 	-webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
 	-webkit-transition: all 0.3s ease-out;
@@ -2753,7 +2753,7 @@ img.grayscale {
 	opacity:0.8;
 }
 img.grayscale:hover {
-	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'https://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
 	-webkit-filter: grayscale(0%);
 	opacity:1;
 }
@@ -2825,7 +2825,7 @@ img.grayscale:hover {
 .max_width_img_project{
 	width:100%;
 	height:350px;
-	background: url("https://www.gchumanrights.org/files/edx/prova-header-dashboard7.jpg") center center no-repeat;
+	background: url("https://gchumanrights.org/files/edx/prova-header-dashboard7.jpg") center center no-repeat;
 	background-size:cover;
 }
 
