rlf logo partners part

--- a/css/style.css
+++ b/css/style.css
@@ -2780,6 +2780,12 @@ li.titolo_gc_asia_pacific{
 	align-self:flex-start;
 }
 
+.logo_rlf_partners{
+	height:70px;
+	margin-right:35px;
+	align-self:flex-start;
+}
+
 .bandiera_parlamento{
 	width:300px;
 	margin-right:20px;
