--- a/css/style.css
+++ b/css/style.css
@@ -3936,7 +3936,7 @@ img.grayscale:hover {
 .max_width_img_hrcuntl{
 	width:100%;
 	height:350px;
-	background: url("../img/untl.jpg") center center no-repeat;
+	background: url("../img/timor-leste-header.jpg") center center no-repeat;
 	background-size:cover;
 }
 
