fixed 	#themo-get-notified on printed version (moved to style.css) -blog post-view experimental

--- a/css/style.css
+++ b/css/style.css
@@ -6744,3 +6744,5 @@ li.tag-chain-item.first.last.titolo_gc_asia_pacific a{
     height: 0;
     width: 0;
 }
+
+#themo-get-notified { cursor: pointer; }
