--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /*Eiuc Stylesheet 2017*/
 
 /* http://meyerweb.com/eric/tools/css/reset/
-v1.61 | 20200603
+v1.62 | 20200605
 License: none (public domain)
 */
 
@@ -4780,7 +4780,7 @@ left: 0;
 .max_width_img_blog{
 	width:100%;
 	height:350px;
-	background: url("../img/list_blog-cover.jpg") center center no-repeat;
+	background: url("../img/preparedness_header.png") center center no-repeat;
 	background-size:cover;
 }
 #blog {
