--- a/css/style_edx_2019.css
+++ b/css/style_edx_2019.css
@@ -4,7 +4,7 @@
 */
 
 /* https://meyerweb.com/eric/tools/css/reset/
-v2.0 | 20110126
+v1.01 | 20200612
 License: none (public domain)
 */
 
@@ -8043,3 +8043,94 @@ a:not(.btn), a:visited:not(.btn) {
     color: #75716e !important;
 }
 
+.poll-header{
+	font-weight: 400 !important;
+    text-transform: initial;
+    color: #75716e;
+    font-size: 24px;
+}
+
+.poll-answer-text {
+	color: #75716e !important;
+	}
+
+input[type="checkbox"], input[type="radio"] {
+    box-sizing: border-box;
+    padding: 0;
+    width: 13px;
+    height: 13px;
+}
+
+.percentage-gauge-container > label > p {
+	color: #75716e !important;
+}
+
+.export-results-button-wrapper{
+	display: none !important;
+}
+
+.poll-footnote {
+    font-weight: 300 !important;
+    color: #75716e !important;
+    font-size: 14px !important;
+}
+
+.view-results-button-wrapper, .export-results-button-wrapper {
+	margin-top: 20px;
+    margin-bottom: 5px;
+    text-align: right;
+    cursor: pointer;
+}
+
+input[type="submit"], input[type="button"], button, .button, .input-main {
+    padding-top: 50px;
+    box-shadow: none !important;
+    border-radius: 0px;
+    letter-spacing: 0px;
+    padding: 20px 35px;
+    text-transform: uppercase;
+    vertical-align: top;
+    font-family: "Roboto";
+    text-shadow: none;
+    overflow: hidden;
+    background: white;
+}
+
+input[type="button"], input[type="button"]:disabled {
+	border: 1px solid #e0dfdf;
+	padding-top: 50px;
+    box-shadow: none !important;
+    border-radius: 0px;
+    letter-spacing: 0px;
+    padding: 20px 35px;
+    text-transform: uppercase;
+    vertical-align: top;
+    font-family: "Roboto";
+    text-shadow: none;
+    overflow: hidden;
+    background: white;
+    opacity: 0.5;
+    font-size: 20px !important;
+    font-weight: 300;
+    color: #75716e !important;
+    display: none;
+}
+
+form input[type="button"]{
+	border: 1px solid #009fe3;
+	padding-top: 50px;
+    box-shadow: none !important;
+    border-radius: 0px;
+    letter-spacing: 0px;
+    padding: 20px 35px;
+    text-transform: uppercase;
+    vertical-align: top;
+    font-family: "Roboto";
+    text-shadow: none;
+    overflow: hidden;
+    background: white;
+    opacity: 1.0;
+    font-size: 20px !important;
+    font-weight: 300;
+    color: #009fe3 !important;
+}
