--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 /*
 /*
-/*Eiuc Stylesheet 2017*/
+/*Global Campus of Human Rights Stylesheet 2020*/
 /*
 
 /* http://meyerweb.com/eric/tools/css/reset/
-v1.65 | 20200608
+v1.77 | 20200701
 License: none (public domain)
 */
 
@@ -6469,14 +6469,14 @@ span#contin-home {
 /* The progress container (grey background) */
 .progress-container {
   width: 100%;
-  height: 5px;
+  height: 3px;
   background: #fff;
   display: block;
 }
 
 /* The progress bar (scroll indicator) */
 .progress-bar {
-  height: 8px;
+  height: 4px;
   background: #76716d;
   width: 0%;
   display: block;
